samples/_failures_safe/1761002189_15fad4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d117ec26.c: In function ‘main’:
./samples/SAFE/__tmp_d117ec26.c:143:10: error: ‘compress_r’ undeclared (first use in this function); did you mean ‘compressed’?
  143 |     if (!compress_r
      |          ^~~~~~~~~~
      |          compressed
./samples/SAFE/__tmp_d117ec26.c:143:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d117ec26.c:143:20: error: expected ‘)’ at end of input
  143 |     if (!compress_r
      |        ~           ^
      |                    )
./samples/SAFE/__tmp_d117ec26.c:143:5: error: expected declaration or statement at end of input
  143 |     if (!compress_r
      |     ^~
